--- a/2019-07/2019-07-05-浙江大学数学学院2019届黄SH同学毕设造假不仅正常毕业而且获得了省级优秀毕业生.md
+++ b/2019-07/2019-07-05-浙江大学数学学院2019届黄SH同学毕设造假不仅正常毕业而且获得了省级优秀毕业生.md
@@ -10,7 +10,7 @@
 
 先前有听闻管理员说，**校内的事情就放在98上说，不要将问题放在外面**。Lz便将想说的话都放在这里，由于内容较长，阅读时常大约5分钟，特此将outline列出。
 
-## **零、本帖指引**
+### **零、本帖指引**
 
 1. 学院声称H同学省优秀毕业生名誉被撤销，撤销通知或正式名单仍未公示
 2. 发帖同学受到H同学家长的威胁
@@ -20,7 +20,7 @@
 6. 附录：lz们对H同学毕业设计流程的质疑
 7. 结语：以本人人格担保的申明
 
-## 一、学院声称H同学省优秀毕业生名誉被撤销，撤销通知或正式名单仍未公示
+### 一、学院声称H同学省优秀毕业生名誉被撤销，撤销通知或正式名单仍未公示
 
 在98帖子被锁沉之后，辅导员与lz沟通，学院某教授受领导也与发帖同学沟通，都**希望lz能替学院做出一个澄清内容——学院方面声称已经撤销H同学省优秀毕业生的荣誉**。不少同学都在知乎平台上对这个事情进行澄清，但已经四天了，**从未见到学院发表的任何公告证明H同学的省优秀毕业生荣誉被撤销，也没有任何正式通知省级和校级优秀毕业生（除去H同学的）名单通告**。
 
@@ -30,7 +30,7 @@ Lz在此合理怀疑，这件事情只是学院放出的一个烟雾弹，只是
 
 在此，Lz希望所有能看到这个帖子的学院行政人员与领导，能够对这件事情做出一个**合理的解释**，这个合理的解释包括，**学院正式发表声明说明H同学已被取消这些荣誉，学院正式说明H同学独创一套的毕设答辩流程是遵从何处的规矩，并且按照应有的规矩让H同学重新修习毕业设计这门课，明年毕业**。
 
-## **二、发帖同学受到H同学家长的威胁**
+### **二、发帖同学受到H同学家长的威胁**
 
 在lz已经放弃这件事情时，**发帖同学的父亲在周六晚上被H同学家人打电话威胁，声称如今事情闹大了，如若自己儿子在现在无法顺利毕业，那么发帖人也别想好过，走着瞧，声称要来杭州立案**。此时各位不妨想想，两个完全陌生的家庭，一方家长是如何迅速得到另一方家长的联系方式，即便lz不说各位心里也有答案了。
 
@@ -38,13 +38,13 @@ Lz在此合理怀疑，这件事情只是学院放出的一个烟雾弹，只是
 
 发帖者和H同学最近距离的一次接触便是二者均在学院楼里，但H同学不愿见到发帖者，两人之间通过辅导员传话，具体内容lz也不得而知。
 
-## **三、lz与H同学家长通话过程**
+### **三、lz与H同学家长通话过程**
 
 发帖同学由于希望能联系上H同学家长来解决事情，避免影响自己的父母。发帖同学同样回拨那天TA父亲接到的号码，试图与H同学家长取得联系，无奈电话一直无法接通。
 
 Lz同样尝试能否接通H同学的家长，给发帖同学争取一个面对面交谈，解决事情的机会。很幸运，接通了，让lz体会到无赖的人究竟能说出多少混账话。电话里的中年男子说**lz这样的大学生容易受到别人的蛊惑，被人挑拨离间，希望lz不要再散布谣言，称电话只是给lz一个警告，如若不听从有lz好看，希望lz能听从大人的劝导**。在lz直接提出质疑说这并不是谣言，整个流程都是正在发生的事实时，对方恼羞成怒对lz说，**你不要管我是怎么做到的，反正我就是做到了，你想怎么样**。更甚，还提到了共产党，虽然不记得具体话语，但意思便是**我们不能反驳共产党（他）的行为**…无语吧，lz也很无语，lz这周说得最多的话就是「我无语了」…
 
-## **四、lz转发知乎链接，受到辅导员的消息轰炸**
+### **四、lz转发知乎链接，受到辅导员的消息轰炸**
 
 在98的帖子被锁沉之后，同样的问题被放在校外平台知乎上，lz将知乎链接转发至朋友圈中，虽为了避免不必要的麻烦已屏蔽辅导员，但仍被有心人士截图至辅导员处，从此迎来了其消息轰炸。
 
@@ -64,11 +64,11 @@ Lz认可体制内的辅导员身处这个岗位，有许多的不得已，从尊
 
 截止至此时，已经第四天了，无任何消息。
 
-## 五、其他同学的一些遭遇
+### 五、其他同学的一些遭遇
 
 最初，在发帖当日，**投递了校长信箱署名的两位同学**，均被辅导员私下联系要求说出一同参与同学的名单。
 
-## 附录：lz对H同学毕设流程提出的质疑
+### 附录：lz对H同学毕设流程提出的质疑
 
 事情背景介绍：
 
@@ -92,7 +92,7 @@ lz详细参考了上述《细则》，并针对《细则》中**第三点-毕业
 
 在2015级学生手册中提及「**凡工作态度差或者未完成所规定任务的，应从严评分，不得降低标准**」「**学生应独立完成毕业论文任务，充分发挥主观能动性和创造性，事实求是，严禁和杜绝弄虚作假以及抄袭他人成果，如有剽窃抄袭或者伪造数据行为，经调查核实，以零分记**」H同学在论文撰写过程中涉及编造数据，且与导师最终没有协商一致，当天缺席答辩，学院没有对应给予H同学论文不及格处理，反而仍给予H同学重新开题结题的权利，这与规则也不相符。
 
-## 结语：以本人人格担保的申明
+### 结语：以本人人格担保的申明
 
 **特此申明：**先前有人质疑因为利益相关才匿名发帖，lz特以**真实ID和真实RVPN账号**回来发帖（虽然不常水98），并以自己的人格担保，之前锁沉的帖子与lz**绝无利益关系**，也**绝无索要封口费**一说。
 
@@ -117,7 +117,18 @@ lz不知道发完帖子之后的明天会面对什么，但无论如何，这也
 
 不好意思又编辑了一下，请大家也看看366楼的内容吧！
 
-## 2. 相关链接
+### 浙江大学数学科学学院关于黄同学毕业论文事件的回复
+
+近日，“浙江大学数学科学学院2019届黄同学毕设造假，不仅正常毕业，而且获得了省级优秀毕业生”的说法在网络上传播。相关内容存在较多不实之处，学院特此回复如下：
+
+1. 网络上传言黄同学已重新进行论文答辩并获得通过，相关信息不实。学院于7月11日上午进行了毕业论文答辩，该生并未通过，结果也已通知学生本人。
+2. 黄同学并未如网络上传言的获得了省级优秀毕业生、校级优秀毕业生荣誉。根据学工部2019年1月14日公布的《关于做好浙江大学2019届优秀本科毕业生评选工作的通知》要求，黄同学曾获得“优秀学生干部”、“优秀团员”、“优秀团干部”共计5次，符合评选省优毕业生的前置条件，予以公示无疑异。学院及学校公示均为预评名单，公示中明确强调“以上名单为预评名单，如毕业设计(论文)成绩不能达到良好及以上，将不能获得此项荣誉”,“凡是毕业设计（论文）成绩良好以下或未获得学位证书的同学将取消其推荐资格。”毕业设计（论文）成绩不达标者自动丧失资格，不另行公示。学院按照学工部6月10日发布的《关于上报2019届校级本科优秀毕业生预评名单中毕业设计（论文）成绩良好以下或未获得学位的学生名单的通知》要求，及时上报了复核名单。黄同学未获得校优毕业生、省优毕业生称号，此项已与学工部确认。
+3. 网络上存在关于黄同学更换导师合理性、合法性的质疑，学院处理流程合规。学院教学委员会是学院处理教学过程中突发事件和疑难问题的最高决策机构。基于导学双方的矛盾，学生提出了换导师的申请，在导师同意的情况下，学院教学委员会召开了专题会议。经教学委员会充分讨论、无记名投票后，一致同意其更换导师、重新进行毕业论文环节。
+4. 关于黄同学毕业设计涉嫌数据造假的问题，学院高度重视，成立了专项调查小组，启动对该事件的调查程序，通过调阅资料、师生访谈或谈话等方式进行调查。调查结果显示，该同学和导师在论文初稿的数据严谨性上曾发生争执，学生不认可导师的意见，而后收回论文初稿。鉴于当时论文尚在写作过程中，且学生陈述初稿已丢失，目前尚无法实质性认定其数据存在造假。
+
+学院各项工作始终秉持公开公平公正的原则，希望同学们不传谣、不信谣，共同维护学院及学校声誉。
+
+# 2. 相关链接
 
 - cc98: https://www.cc98.org/topic/4858021/
 
